Aligned li content correctly

--- a/src/components/Dashboard/CurrencyPortfolio/currencyportfolio.css
+++ b/src/components/Dashboard/CurrencyPortfolio/currencyportfolio.css
@@ -28,6 +28,7 @@
 .currency--portfolio--list li {
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 	margin: 10px 0;
 }
 
